cloudformation/app_dbs_server.yaml
Description: >
  Ugochi Jones / Udacity 2021 Capstone
  Creates the server and database components of the capstone infrastructure.

# Parameters
# ----------
Parameters:
  EnvironmentName:
    Description: A name that will be prefised to the resource names
    Type: String

  JumpBoxInstanceTypeParameter:
    Type: "String"
    Description: |
     "Instance Type for JumpBox. Enter t2.micro, t3.medium, m1.small, or m1.large. Default is t2.micro."
    Default : "t2.micro"
    AllowedValues : 
      - "t2.micro" 
      - "t3.medium" 
      - "m1.small" 
      - "m1.large"
  
  JumpBoxKeyNameParameter:
    Type: "String"
    Description: The Key-Pair name to associate with the JumpBox to support SSH connection.
  
  # May remove because I don't want that in the git repository
  PersonalIPParameter:
    Type: "String"
    Description: Personal Ips that are allowed to access the JumpBox

  AppDBInstanceID:
    Default: appdbinstanceid
    Description: Application database instance id
    Type: String
    MinLength: '1'
    MaxLength: '63'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: >-
      Must begin with a letter and must not end with a hyphen or contain two
      consecutive hyphens.
  
  AppDBName:
    Default: appDB
    Description: Name for the application Database
    Type: String
    MinLength: '1'
    MaxLength: '64'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.
  
  AppDBInstanceClass:
    Default: db.m5.large
    Description: DB instance class for appication database
    Type: String
    ConstraintDescription: Must select a valid DB instance type.
  
  AppDBAllocatedStorage:
    Default: '50'
    Description: The size of the application database (GiB)
    Type: Number
    MinValue: '20'
    MaxValue: '65536'
    ConstraintDescription: must be between 20 and 65536 GiB.
  
  AppDBUsername:
    NoEcho: 'true'
    Description: Username for Applicatin Postgres Database
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
  
  AppDBPassword:
    NoEcho: 'true'
    Description: Password Application Postgres Database access
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.

  AnalyticsDBInstanceID:
    Default: AnalyticsDBInstance
    Description: My database instance
    Type: String
    MinLength: '1'
    MaxLength: '63'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: >-
      Must begin with a letter and must not end with a hyphen or contain two
      consecutive hyphens.
  
  AnalyticsDBName:
    Default: appDB
    Description: Database for application
    Type: String
    MinLength: '1'
    MaxLength: '64'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.
  
  AnalyticsDBInstanceClass:
    Default: db.m5.large
    Description: DB instance class
    Type: String
    ConstraintDescription: Must select a valid DB instance type.
  
  AnalyticsDBAllocatedStorage:
    Default: '50'
    Description: The size of the database (GiB)
    Type: Number
    MinValue: '20'
    MaxValue: '65536'
    ConstraintDescription: must be between 20 and 65536 GiB.
  
  AnalyticsDBUsername:
    NoEcho: 'true'
    Description: Username for Analytics Postgres database access
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
  
  AnalyticsDBPassword:
    NoEcho: 'true'
    Description: Password to Postgres analytics database
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.

# Resources
# ---------
Resources:
  AppDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for application database
      VpcId: 
        Fn::ImportValue:
            !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 5432 # This is port for SSH
          ToPort: 5432
          CidrIp:
            Fn::ImportValue:
              !Sub ${EnvironmentName}-VpcCIDR # Only for ids in VPC
  
  AnalyticsDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for application database
      VpcId: 
        Fn::ImportValue:
            !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 5432 # This is port for SSH
          ToPort: 5432
          #CidrIp: 0.0.0.0/0 # Wild card for testing
          CidrIp: PersonalIPParameter # My Personal IP
        # Add DBT IP as another ingress allowed

  # Will probably make this security group in the console, so that my ip stays private.
  PersonalSSHSecGroup:
    # Security groups are linked to a resource (e.g., Servers, databases, or Load Balancers)
    Type: AWS::EC2::SecurityGroup
    #DeletionPolicy: Retain
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: 
        Fn::ImportValue:
            !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80 # Port 80 is for internet traffic, HTTP. Port 443 is for HTTPS
          ToPort: 80
          CidrIp: PersonalIPParameter #My personal

        - IpProtocol: tcp
          FromPort: 22 # This is port for SSH
          ToPort: 22
          #CidrIp: 0.0.0.0/0 # Wild card for testing 
          CidrIp: PersonalIPParameter #My personal 
      
      # Allow to any internal address.
      SecurityGroupEgress:
        - IpProtocol: tcp
          # Connect to servers in private subnet using port 22 (ssh)
          FromPort: 22
          ToPort: 22
          CidrIp:
            Fn::ImportValue:
              !Sub ${EnvironmentName}-VpcCIDR 

  # I might need to attached an elastic ip to this instance
  # because I want Auto-assign Public IP.
  JumpBox:
    Type: AWS::EC2::Instance
    Description: EC2 instance that I alone can use to access the private servers.
    DependsOn: PersonalSSHSecGroup
    Properties:
      InstanceType: t3.small
      ImageId: ami-087c17d1fe0178315
      KeyName: !Ref JumpBoxKeyNameParameter
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - Ref: "PersonalSSHSecGroup"
          SubnetId: 
            Fn::ImportValue:
              !Sub ${EnvironmentName}-PUB1-SN
      Tags:
        - Key: "Name"
          Value: "JumpBox"
        - Key: "Purpose"
          Value: "Bastion host (aka. JumpBox)"
        - Key: "Project"
          Value: "Udacity Project 2 - IAC"
